# fortnite-api

./: .gitignore  Cargo.toml
examples/: aes.rs  banners.rs  cosmetics.rs  creatorcode.rs  map.rs  news.rs  playlists.rs  shop.rs  stats.rs
src/: lib.rs
src/response_types/: aes.rs  banners.rs  cosmetics.rs  creatorcode.rs  map.rs  mod.rs  news.rs  playlists.rs  shop.rs  stats.rs
src/utils/: fetch.rs  mod.rs
