[package]
name = "fortnite-api"
version = "0.1.0"
edition = "2021"
description = "A library for interacting with the Fortnite API"
license = "MIT"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
