[package]
name = "fortnite-api"
version = "0.2.0"
edition = "2021"
description = "A library for interacting with the Fortnite API"
license = "MIT"
repository = "https://github.com/raimannma/fortnite-api"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
url = "2.5.7"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
